--- a/index.html
+++ b/index.html
@@ -1,9 +1,129 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Stylesheet, then fonts, then fontawesome -->
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:600&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
+  <script src="https://kit.fontawesome.com/932b8f3272.js"></script>
+</head>
 
 <body>
-  <h1>Hello World</h1>
-  <p>I'm hosted with GitHub Pages.</p>
+  <main>
+    <section class="top-container">
+      <div class="top-row">
+        <img class="top-logo" src="images/logo.svg" alt="">
+        <button class="top-button" type="button" name="button">Try It Free</button>
+      </div>
+      <div class="top-grid">
+        <div class="top-text">
+          <h1 class="top-heading">Build The Community<br /> Your Fans Will Love</h1>
+          <p class="top-paragraph">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+          <button class="button" type="button" name="button">Get Started For Free</button>
+        </div>
+        <div>
+          <img class="top-img" src="images/illustration-mockups.svg" alt="top-img">
+        </div>
+      </div>
+    </section>
+
+    <section class="container">
+      <div class="grid">
+        <div class="main-text">
+          <h2 class="heading">Grow Together</h2>
+          <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
+        </div>
+        <div class="main-img">
+          <img class="main-img" src="images/illustration-grow-together.svg" alt="grow-img">
+        </div>
+      </div>
+    </section>
+
+    <section class="container">
+      <div class="grid">
+        <div>
+          <img class="main-img" src="images/illustration-flowing-conversation.svg" alt="convo-img">
+        </div>
+        <div class="main-text">
+          <h2 class="heading">Flowing Conversations</h2>
+          <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads
+            have just-in-time loading for a more natural flow.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="container">
+      <div class="grid">
+        <div class="main-text">
+          <h2 class="heading">Your Users</h2>
+          <p>It takes no time at all to integrate Huddle with your app's authentication solution.
+            This means, once signed in to your app, your users can start chatting immediately.</p>
+        </div>
+        <div>
+          <img class="main-img" src="images/illustration-your-users.svg" alt="users-img">
+        </div>
+      </div>
+    </section>
+
+    <section class="cta">
+      <div class="cta-flex">
+        <h2>Ready To Build Your Community?</h2>
+        <div class="bottom-text-btn-container">
+          <button class="button bottom-text-btn" type="button" name="button">Get Started For Free</button>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer-container">
+      <div class="footer-grid">
+        <div class="footer-content">
+          <div class="footer-logo">
+            <img src="images/logo-white.svg" alt="logo-img">
+          </div>
+          <div class="footer-item">
+            <img class="footer-img" src="images/icon-location.svg" alt="location-icon">
+            <p>Lorem ipsum dolor sit amet, consectetur<br /> adipiscing elit, sed do eiusmod tempor<br />
+              incididunt ut labore et dolore magna aliqua</p>
+          </div>
+          <div class="footer-item">
+            <img class="footer-img" src="images/icon-phone.svg" alt="phone-icon">
+            <p>+1-543-123-4567</p>
+          </div>
+          <div class="footer-item email">
+            <img class="footer-img" src="images/icon-email.svg" alt="email-icon">
+            <p>example@huddle.com</p>
+          </div>
+        </div>
+        <div class="footer-item">
+          <ul class="list">
+            <li>About Us</li>
+            <li>What We Do</li>
+            <li>FAQ</li>
+          </ul>
+        </div>
+        <div class="footer-item">
+          <ul class="list">
+            <li>Career</li>
+            <li>Blog</li>
+            <li>Contact Us</li>
+          </ul>
+        </div>
+        <div class="footer-item icons">
+          <i class="fab fa-facebook-square"></i>
+          <i class="fab fa-twitter-square"></i>
+          <i class="fab fa-instagram"></i>
+        </div>
+      </div>
+      </div>
+      <div class="cpright">
+        &copy; Copyright 2018 Huddle. All rights reserved.
+      </div>
+    </footer>
+  </main>
 </body>
 
 </html>
