--- a/index.html
+++ b/index.html
@@ -1,129 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Stylesheet, then fonts, then fontawesome -->
+  <meta charset="utf-8">
+  <title>My Site</title>
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:600&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
-  <script src="https://kit.fontawesome.com/932b8f3272.js"></script>
+  <link rel="icon" href="images/favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <main>
-    <section class="top-container">
-      <div class="top-row">
-        <img class="top-logo" src="images/logo.svg" alt="">
-        <button class="top-button" type="button" name="button">Try It Free</button>
-      </div>
-      <div class="top-grid">
-        <div class="top-text">
-          <h1 class="top-heading">Build The Community<br /> Your Fans Will Love</h1>
-          <p class="top-paragraph">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
-          <button class="button" type="button" name="button">Get Started For Free</button>
-        </div>
-        <div>
-          <img class="top-img" src="images/illustration-mockups.svg" alt="top-img">
-        </div>
-      </div>
-    </section>
+  <div class="topContainer">
+    <img class="topCloud" src="images/cloud.png" alt="cloud-img">
+    <h1>I'm Matthew</h1>
+    <h2>a <span><u>pro</u></span>grammer.</h2>
+    <img class="bottomCloud" src="images/cloud.png" alt="cloud-img">
+    <img class="mountain" src="images/mountain.png" alt="mountain-img">
+  </div>
 
-    <section class="container">
-      <div class="grid">
-        <div class="main-text">
-          <h2 class="heading">Grow Together</h2>
-          <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
-        </div>
-        <div class="main-img">
-          <img class="main-img" src="images/illustration-grow-together.svg" alt="grow-img">
-        </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img class="profileImage" src="images/man.png" alt="profile-img">
+      <h2>Hello.</h2>
+      <p class="intro">I am an aspiring Web Developer. I love coffee and eggs benny.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="middleImages codeImage" src="https://media.giphy.com/media/1ynCEtlgMPAeNAqdnu/giphy.gif" alt="code-img">
+        <h3>Web Development & Design</h3>
+        <p>I got into Web Development because I wanted to both challenge myself and further my career. I hope to be an expert full stack developer soon.</p>
       </div>
-    </section>
+      <div class="skill-row">
+        <img class="middleImages chilliImage" src="images/chillies.png" alt="chilli-img">
+        <h3>Lorem Ipsum Dolor</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+    </div>
+    <hr>
 
-    <section class="container">
-      <div class="grid">
-        <div>
-          <img class="main-img" src="images/illustration-flowing-conversation.svg" alt="convo-img">
-        </div>
-        <div class="main-text">
-          <h2 class="heading">Flowing Conversations</h2>
-          <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads
-            have just-in-time loading for a more natural flow.</p>
-        </div>
-      </div>
-    </section>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Lorem Ipsum Dolor.</h3>
+      <p class="hwings">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
+      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+    </div>
 
-    <section class="container">
-      <div class="grid">
-        <div class="main-text">
-          <h2 class="heading">Your Users</h2>
-          <p>It takes no time at all to integrate Huddle with your app's authentication solution.
-            This means, once signed in to your app, your users can start chatting immediately.</p>
-        </div>
-        <div>
-          <img class="main-img" src="images/illustration-your-users.svg" alt="users-img">
-        </div>
-      </div>
-    </section>
+    <div class="bottomContainer">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="website" href="https://www.appbrewery.co/">Website</a>
+      <p class="cpRight">© 2019 Matthew Pepper.</p>
+      <div class="credit">Icons made by <a class="credit-link" href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a class="credit-link" href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a
+          class="credit-link" href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+    </div>
+  </div>
 
-    <section class="cta">
-      <div class="cta-flex">
-        <h2>Ready To Build Your Community?</h2>
-        <div class="bottom-text-btn-container">
-          <button class="button bottom-text-btn" type="button" name="button">Get Started For Free</button>
-        </div>
-      </div>
-    </section>
-
-    <footer class="footer-container">
-      <div class="footer-grid">
-        <div class="footer-content">
-          <div class="footer-logo">
-            <img src="images/logo-white.svg" alt="logo-img">
-          </div>
-          <div class="footer-item">
-            <img class="footer-img" src="images/icon-location.svg" alt="location-icon">
-            <p>Lorem ipsum dolor sit amet, consectetur<br /> adipiscing elit, sed do eiusmod tempor<br />
-              incididunt ut labore et dolore magna aliqua</p>
-          </div>
-          <div class="footer-item">
-            <img class="footer-img" src="images/icon-phone.svg" alt="phone-icon">
-            <p>+1-543-123-4567</p>
-          </div>
-          <div class="footer-item email">
-            <img class="footer-img" src="images/icon-email.svg" alt="email-icon">
-            <p>example@huddle.com</p>
-          </div>
-        </div>
-        <div class="footer-item">
-          <ul class="list">
-            <li>About Us</li>
-            <li>What We Do</li>
-            <li>FAQ</li>
-          </ul>
-        </div>
-        <div class="footer-item">
-          <ul class="list">
-            <li>Career</li>
-            <li>Blog</li>
-            <li>Contact Us</li>
-          </ul>
-        </div>
-        <div class="footer-item icons">
-          <i class="fab fa-facebook-square"></i>
-          <i class="fab fa-twitter-square"></i>
-          <i class="fab fa-instagram"></i>
-        </div>
-      </div>
-      </div>
-      <div class="cpright">
-        &copy; Copyright 2018 Huddle. All rights reserved.
-      </div>
-    </footer>
-  </main>
 </body>
 
 </html>
